@@ -13,6 +13,7 @@ version 0.70.02
 	Writing white balance fields
 	Reading flash fields (K-x only)
 	Writing flash exposure compensation field
+	Writing drive mode
 
 version 0.70.01 ( 2011-01-19 )
 	File format support for commandline interface (--file_format)
